<resources>
    <string name="app_name">LandscAPPe</string>
    <string name="title">Title</string>
    <string name="explanation">Explanation</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="grid">Grid</string>
    <string name="staggered_horizontal">Staggered Horizontal</string>
    <string name="staggered_vertical">Staggered Vertical</string>
</resources>